fix(build): add robust async_hooks shim with CJS, package.json alias, and absolute path

--- a/package.json
+++ b/package.json
@@ -76,4 +76,7 @@
     "typescript": "^5.8.3",
     "wrangler": "^3.99.0"
   }
+  "browser": {
+    "async_hooks": "./lib/async-hooks-shim.js"
+  }
 }
